<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formTitle"
            android:textSize="10pt">
        </TextView>
        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/EmployeeId"
            android:ems="10"
            android:id="@+id/EditTextId" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/Phone"
            android:ems="10"
            android:id="@+id/EditTextPhone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/Address"
            android:ems="10"
            android:id="@+id/EditTextAddress"
            android:layout_weight="0.19" />
        <Button
            android:id="@+id/Submit"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:onClick="submit"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>
</RelativeLayout>