<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout">
        android:weightSum="1">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formTitle"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/EmployeeId"
            android:ems="10"
            android:id="@+id/EditTextId" />
        <Button
            android:id="@+id/Search"
            android:layout_height="wrap_content"
            android:text="@string/Search"
            android:onClick="search"
            android:layout_width="fill_parent">
        </Button>
        <Button
            android:id="@+id/AddRecord"
            android:layout_height="wrap_content"
            android:text="@string/AddNew"
            android:onClick="addRecord"
            android:layout_width="fill_parent">
        </Button>
        <TextView
            android:id="@+id/TextViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt">
        </TextView>
    </LinearLayout>
</RelativeLayout>